change labels in chart when changing option in dropdown

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Planetary Habitability Laboratory</title>
+    <title>Exoplanet Data Explorer</title>
   </head>
   <body>
     <div id="main"></div>
